--- a/moving-shapes/css/style.css
+++ b/moving-shapes/css/style.css
@@ -14,6 +14,9 @@ body{
   background-color:#a6a3d4;
   background-image: url(http://juliaroga.com/wp-content/themes/yoo_luna_wp/less/uikit/images/lightblue/bg.png) !important;
 }
+.shape-circle, .shape-triangle-outline-container,.shape-triangle{
+  filter:drop-shadow(0px 0px 10px rgba(0,0,0,.2));
+}
 
 .shape-circle{
   position:absolute;
@@ -24,7 +27,6 @@ body{
   border: solid #e8aaaa 20px;
   border-radius:1000px;
 }
-
 .shape-triangle-outline{
   position:absolute;
   width:300px;
@@ -33,7 +35,6 @@ body{
   clip-path: polygon(0px 130px,130px 65px,92px 65px,20px 100px,20px 30px,92px 65px,130px 65px,0px 0px); 
   transform: rotate(70deg);
 }
-
 .shape-triangle{
   position:absolute;
   width:0px;
@@ -63,7 +64,7 @@ body{
   transform: rotate(-90deg);
 }
 #shape-4{
-  margin-top:60vh;
+  margin-top:50vh;
   margin-left:5%;
   transform: rotate(90deg);
 }
@@ -95,23 +96,52 @@ body{
   margin-left:60%;
 }
 #shape-9{
-    width:5vw;
-  height:7vh;
+  width:6vw;
+  height:4vh;
   margin-top:50vh;
   margin-left:30%;
   transform: rotate(330deg);
-    border: solid #f3d9d0 16px;
+  border: solid #dce6fb 16px;
 }
 #shape-10{
-    width:70px;
+  width:70px;
   height:70px;
   margin-top:95vh;
   margin-left:65%;
-    border: solid #fff5ba 16px;
+  border: solid #fff5ba 16px;
 }
 
+#shapes-foreground{
+  position:absolute;
+  width:100vw;
+}
+#shapes-foreground h1{
+  position: relative ;
+  font-family: 'Poppins', sans-serif;
+  font-size: 182px ;
+  line-height: 1.4 ;
+  font-weight: 300 ;
+  letter-spacing: -7px ;
+  text-align: center ;
+  color: #fff ;
+  text-shadow:1px 1px 23px rgba(0,0,0,.2);
+  margin-top:40vh;
+}
 
+#shapes-foreground h2{
+  color: #fff463;
+  font-weight: 900;
+  text-align: center;
+  margin-top: -60px;
+  margin-left:-100px;
+  font-size: 1.55rem;
+  margin-bottom: .5rem;
+  font-family: 'Poppins', sans-serif;
+  line-height: 1.2;
+  letter-spacing: 1.5px;
+    text-shadow:1px 1px 23px rgba(0,0,0,.2);
 
+}
 
 
 
@@ -123,3 +153,26 @@ body{
 /*small*//*clip-path: polygon(0px 180px,180px 90px,135px 90px,25px 145px,25px 35px,135px 90px,180px 90px,0px 0px); */
 /*clip-path: polygon(0px 250px,216.50px 125px,175px 125px,20px 215px,20px 35px,175px 125px,216.50px 125px,0px 0px); */
 /*clip-path: polygon(51px 244px,330px 315px,300px 290px,82px 234px,220px 71px,300px 290px,330px 315px,226px 35px); */
+
+@media screen and (max-width: 950px) {
+  #shapes-foreground h2{
+      margin-top: 50px;
+  margin-left:0px;
+  }
+  #shapes-foreground{
+    width:500px;
+  margin:0 20%;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  #shapes-foreground{
+  margin:0 10%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #shapes-foreground{
+  margin:0%;
+  }
+}
