--- a/gallery-preview/css/style.css
+++ b/gallery-preview/css/style.css
@@ -1,24 +1,37 @@
-body{background-color:#a6a3d4;display:flex;}
-.portfolio-container{
-  margin-left:0px;
-  margin:auto;
-
+body{  margin:0px;
+  padding:0px; }
+#portfolio-widget{
+  color:black;
+  background-color:#a6a3d4;
+  font-family: 'Poppins',sans-serif; 
+  font-weight:600 ;
+  width:100vw;
+  height:100vh;
+  display:flex;
+  margin:0px;
+  padding:0px;
 }
 
-.square,.preview,.title{
-  width:300px;
+.portfolio-container{
+  margin:10px auto;
+  clear:all;
+}
+
+/*squares*/
+.square,.square-preview,.square-title{
+  width:450px;
   transition:all 700ms;
 }
 .square{
-  height:300px;
+  height:420px;
   padding:5px;
   background-color:white;
   border-radius:14px;
   float:left;
   margin:5px;
 }
-.preview{
-  height:200px;
+.square-preview{
+  height:290px;
   background-color:#a8f1ac;
   border-radius:10px 10px 0px 0px;
   transition: all 700ms, background-position 5000ms;
@@ -26,73 +39,112 @@ body{background-color:#a6a3d4;display:flex;}
   background-size:cover;
   background-position:top;
 }
-.title{
-  height:95px;
+.square-title{
+  height:125px;
   margin-top:5px;
-  background-color:#e8aaaa;
+  background-color:#dde7fb;
   border-radius:0px 0px 10px 10px;
+  display:flex;
 }
-
+.square-title h1{
+    padding-top:5px;
+  font-weight:600;
+  text-align:center;
+  color:black;
+  clear:left;
+  margin:auto;
+}
 .square:hover{
-  width:400px;
+  width:475px !important;
   height:600px;
 }
-.square:hover .preview{
-  width:400px;
+.square:hover .square-preview{
+  width:475px !important;
   height:500px;
   background-position:bottom;
 }
-.square:hover .title{
-  width:400px;
+.square:hover .square-title{
+  width:475px !important;
   height:95px;
   background-color:#a8f1ac;
 }
+.square:hover .square-title h1{
+  color:black;
+}
+/*labels*/
+.square-label::before,.square-label::after {
+  font-size:12px;
+  padding:1px 7px;
+  color:black;
+  border-radius:90px;
+  margin-left:5px;
+}
+.square-label::after{
+  background-color:#77759a;
+  color:white;
+}
+.square-label{
+  padding:1px;
+  margin-bottom:5px;
+  float:left;
+    position:absolute;
+}
+.webdesign .square-label::before{
+  content:'web design';
+  background-color:#E8AAAA;
+}
+.design .square-label::before{
+  content:'design';
+  background-color:#E8A9BD;
+}
+.code .square-label::before{
+  content:'code';
+  background-color:#FFCD93;
+}
+.game .square-label::before{
+  content:'game';
+  background-color:#FFF5BA;
+}
+.app .square-label::before{
+  content:'app';
+  background-color:#DCE6FB;
+}
+.experement .square-label::before{
+  content:'experement';
+  background-color:#FFDE9E;
+}
+.behance .square-label::after{
+  content:'behance';
 
+}
+.github .square-label::after{
+  content:'github';
 
-.maincontent, .nextcontent {
-  display: none;
+}
+.codepen .square-label::after{
+  content:'codepen';
+}
+.site .square-label::after{
+  content:'site';
 }
 
-
+/*blob*/
 svg path {
   transition: d 0.35s;
-  fill: rgb(254, 132, 14);
-      animation:changeBlob 2s linear 15; 
+  fill: #a8f1ac;
+  animation:changeBlob 2s linear 15; 
 }
 svg {
-  width: 10px;
-  height: 10px;
+  width: 1px;
+  height: 1px;
 }
 .bigger-svg{
-    animation:bigger 3s linear 1;
+  animation:bigger 2000ms ease-in 1;
 }
-/* .path-animation{
-    animation:changeBlob 2s linear 15; 
-} */
 .blob{
   position:absolute;
-    transform-origin: center;
+  transform-origin: center;
 }
-
-
-
-
-/* .animate-me{
-  animation-name: change-shape;
-  animation-duration: 2s;
-  animation-iteration-count: 1;  
-}
-
-@keyframes change-shape{
-  0%  { border-radius: 63% 37% 54% 46% / 55% 48% 52% 45%; } 
-  9% { border-radius: 50% 60% 54% 46% / 49% 60% 40% 51%; } 
-  38% { border-radius: 50% 50% 34% 66% / 56% 68% 32% 44%; } 
-  56% { border-radius: 61% 39% 67% 33% / 70% 50% 50% 30%; } 
-  80% { border-radius: 46% 54% 50% 50% / 35% 61% 39% 65%; } 
-  100% { border-radius: 26% 24% 20% 20% / 25% 21% 29% 25%; } 
-}  */
-
-
 @keyframes changeBlob{
   0%{d: path("M 133.3 -206 C 154.6 -168.1 141 -104.7 147.4 -55 C 153.8 -5.3 180.1 30.9 170 53.2 C 159.9 75.4 113.5 83.8 79.1 96.7 C 44.7 109.5 22.3 126.7 -16.2 149 C -54.7 171.2 -109.3 198.5 -123.4 179.1 C -137.5 159.6 -111.1 93.6 -97.7 51.4 C -84.3 9.3 -84 -9 -93 -45.4 C -102 -81.8 -120.4 -136.3 -106.4 -176.7 C -92.5 -217 -46.2 -243 4.9 -249.7 C 56 -256.5 112.1 -243.9 133.3 -206 Z")}
   100%{d: path("M 133.3 -206 C 154.6 -168.1 141 -104.7 147.4 -55 C 153.8 -5.3 180.1 30.9 170 53.2 C 159.9 75.4 113.5 83.8 79.1 96.7 C 44.7 109.5 22.3 126.7 -16.2 149 C -54.7 171.2 -109.3 198.5 -123.4 179.1 C -137.5 159.6 -111.1 93.6 -97.7 51.4 C -84.3 9.3 -84 -9 -93 -45.4 C -102 -81.8 -120.4 -136.3 -106.4 -176.7 C -92.5 -217 -46.2 -243 4.9 -249.7 C 56 -256.5 112.1 -243.9 133.3 -206 Z")}
@@ -102,8 +154,73 @@ svg {
   60%{d: path("M 82.7 -149.6 C 87.7 -110.1 59.1 -60 72.2 -22.7 C 85.3 14.5 140.1 38.9 151.8 63.6 C 163.5 88.3 132 113.3 99.5 126.8 C 67 140.2 33.5 142.1 -1.1 143.6 C -35.7 145.1 -71.3 146.2 -103.3 132.6 C -135.4 119 -163.7 90.7 -175.1 56.7 C -186.4 22.7 -180.7 -17.1 -172.7 -60.5 C -164.7 -104 -154.3 -151.1 -125.2 -182.8 C -96 -214.5 -48 -230.7 -4.6 -224.4 C 38.8 -218.1 77.6 -189.1 82.7 -149.6 Z");}
   80%{d: path("M 113.8 -169.8 C 147.2 -132.3 173.9 -98.8 182.7 -61.7 C 191.5 -24.7 182.3 15.8 156.6 37.3 C 130.9 58.8 88.7 61.4 59.8 76 C 31 90.6 15.5 117.3 -8.3 128.8 C -32.1 140.2 -64.3 136.5 -109.1 127 C -154 117.6 -211.6 102.5 -217.4 73.3 C -223.2 44.1 -177.2 0.7 -152.2 -41.2 C -127.3 -83.2 -123.3 -123.7 -101.4 -164.9 C -79.5 -206.2 -39.8 -248.1 0.2 -248.3 C 40.2 -248.6 80.3 -207.2 113.8 -169.8 Z");}
 }
-
 @keyframes bigger{
   0%{transform:scale(0,0); width:0px;height:0px;}
-  100%{transform:scale(210,210); width:250px;height:250px;}
+  50%{transform:scale(20,20); width:50px;height:50px;}
+  100%{transform:scale(100,100); width:100px;height:100px;}
+}
+
+/*more info boxes*/
+#more-info{
+  background-color:white;
+  height:90vh;
+  width:0px;
+  z-index:100;
+  margin:auto;
+  display:none;
+  border-radius:14px;
+  padding:20px;
+  font-family: poppins, sans-serif;
+  margin-top:40px;
+overflow:hidden;
+}
+.morecontent{
+  display:none;
+    height:90vh;
+    overflow-y:scroll;
+}
+.close-content{
+  font-family: arial, sans-serif;
+  font-size:25px;
+  cursor: pointer;
+  float:right;
+  margin-right:30px;
+}
+.morecontent img{
+  width:50%;
+  float:left;
+}
+.morecontent img + h1{
+  padding-top:10px;
+  width:50%;
+    float:left;
+}
+
+/*show me*/
+.picker{
+  width:100%;
+  margin:0px auto;
+  height:100px;
+  display:flex;
+}
+.picker h1{
+  float:left;
+  margin:auto 0px;
+  color:white;
+}
+.picker select{
+  margin:auto 5px;
+  font-size: inherit; 
+  font-weight: 600;
+  font-family: Poppins;
+  background-color: transparent;
+  border-bottom: solid white;
+  color:white;
+}
+.picker option{
+  font-size: inherit; 
+  font-weight: 600;
+  font-family: Poppins;
+  color:white;
+  background-color:#7a9aea;
 }
